# chirpCalculationKernel

./: .gitignore  readme.md
MATLAB/: compute_and_validate.m  example.m  init.m  load_cfg.m  save_cfg.m  set_language.m  set_to_default.m
c/: CMakeLists.txt  chirpParameters.h  example.c
cpp/: CMakeLists.txt  chirpParameters.cpp  chirpParameters.h  config.cpp  config.h  example.cpp  language.h
cs/chirpParameters/: chirpParameters.sln
cs/chirpParameters/chirpParameters/: chirpParameters.cs  chirpParameters.csproj
cs/example/: example.sln
cs/example/example/: example.cs  example.csproj
go/: example.go  go.mod
python/: chirpParameters.py  example.py
